feat: add progress bar, repeatbtn

--- a/js30audio/index.html
+++ b/js30audio/index.html
@@ -19,13 +19,18 @@
                 <div id="name">Friends</div>
                 <div id="artist">nanebo</div>
 
-                <input type="range" id="progress_bar">
+                <!-- <input type="range" id="progress_bar"> -->
+                <div class="timeline">
+                    <div class="progress"></div>
+                </div>
                 <div class="currentTime time">0:00</div>
                 <div class="durationTime time">0:00</div>
                 <div class="btns">
+                    <img id="loop" src="./img/reset-reload.svg" alt="loop">
                     <img id="prevBtn" src="./img/prev-step.svg" alt="prev">
                     <img id="play_pause" src="./img/circle-play.svg" alt="play">
                     <img id="nextBtn" src="./img/next-step.svg" alt="next">
+                    <img id="volume" src="./img/volume.svg" alt="volume">
                 </div>
             </div>
         </div>
