feat: volume bar

--- a/js30audio/index.html
+++ b/js30audio/index.html
@@ -30,7 +30,13 @@
                     <img id="prevBtn" src="./img/prev-step.svg" alt="prev">
                     <img id="play_pause" src="./img/circle-play.svg" alt="play">
                     <img id="nextBtn" src="./img/next-step.svg" alt="next">
-                    <img id="volume" src="./img/volume.svg" alt="volume">
+                    <div class="volume_wrapper">
+                        <img id="volume" src="./img/volume.svg" alt="volume">
+                        <div class="volumeProgress">
+                            <div class="volumeCurrent"></div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
