fix: js change backGroundImg

--- a/js30audio/index.html
+++ b/js30audio/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="container">
-        <img id="backGroundImg" src="./img/image1.jpg" alt="img1">
+        <img class="bGimg" id="backGroundImg" src="./img/image1.jpg" alt="img1">
         <audio id="audio" src="./audio/nanebo - Friends.mp3"></audio>
         <div class="wrapper">
-            <img id="posterImg" src="./img/poster1.jpeg" alt="poster1">
+            <img class="poster" id="posterImg" src="./img/poster1.jpeg" alt="poster1">
 
             <div class="controls">
                 <div id="name">Friends</div>
