--- a/js30audio/index.html
+++ b/js30audio/index.html
@@ -41,7 +41,12 @@
             </div>
         </div>
     </div>
-
+    <footer class="footer">
+        <span>2023</span>
+        <a href="https://rs.school/js-stage0/" target="_blank">The Rolling
+            Scopes School</a>
+        <a href="https://github.com/misterT1A" target="_blank">misterT1A</a>
+    </footer>
     <script src="app.js"></script>
 </body>
 
