feat: add video file, img

--- a/js30video/index.html
+++ b/js30video/index.html
@@ -9,6 +9,25 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="video_player_wrapper">
+            <video class="video" src="./src/video/video (1080p).mp4"></video>
+            <div class="controls">
+                <div class="progress_bar">
+                    <div class="progress"></div>
+                </div>
+                <div class="buttons">
+                    <img class="btn play_pause" src="./src/img/play-svgrepo-com.svg" alt="playPause">
+                    <input class="speed" type="range">
+                    <img class="btn volume" src="./src/img/volume-loud-svgrepo-com.svg" alt="volume">
+                    <img class="btn fullscreen" src="./src/img/fullscreen-svgrepo-com.svg" alt="fullscreen">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 
 
     <script src="app.js"></script>
