--- a/js30video/index.html
+++ b/js30video/index.html
@@ -17,19 +17,25 @@
                     <div class="progress"></div>
                 </div>
                 <div class="buttons">
-                    <img class="btn play_pause" src="./src/img/play-svgrepo-com.svg" alt="playPause">
-                    <input class="speed" type="range">
-                    <img class="btn volume" src="./src/img/volume-loud-svgrepo-com.svg" alt="volume">
-                    <img class="btn fullscreen" src="./src/img/fullscreen-svgrepo-com.svg" alt="fullscreen">
+                    <div class="left">
+                        <img class="btn play_pause" src="./src/img/play-svgrepo-com.svg" alt="playPause">
+                        <input class="speed" type="range" min="0.5" max="2" step="0.1" value="1">
+                    </div>
+                    <div class="right">
+                        <div class="volum_wraper">
+                            <img class="btn volume" src="./src/img/volume-loud-svgrepo-com.svg" alt="volume">
+                            <div class="volum_progress_bar">
+                                <input class="volume_progress" type="range" min="0.2" max="1" step="0.05" value="0.8">
+                                <!-- <div class="volume_progress"></div> -->
+                            </div>
+                        </div>
+                        <img class="btn fullscreen" src="./src/img/fullscreen-svgrepo-com.svg" alt="fullscreen">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-
-
-
-
+    <footer class="footer"></footer>
     <script src="app.js"></script>
 </body>
 
