feat: js get purationTime upload video

--- a/js30video/index.html
+++ b/js30video/index.html
@@ -22,6 +22,15 @@
                         <input class="speed" type="range" min="0.5" max="2" step="0.1" value="1">
                     </div>
                     <div class="right">
+                        <div class="skip_left">
+                            <img class="btn prev" src="./src/img/skip-previous-svgrepo-com.svg" alt="prevSkip">
+                            « 10s
+                        </div>
+                        <div class="skip_next">
+                            25s »
+                            <img class="btn next" src="./src/img/skip-next-svgrepo-com.svg" alt="nextSkip">
+                        </div>
+
                         <div class="volum_wraper">
                             <img class="btn volume" src="./src/img/volume-loud-svgrepo-com.svg" alt="volume">
                             <div class="volum_progress_bar">
