feat: add header

--- a/js30imageGalery/imdex.html
+++ b/js30imageGalery/imdex.html
@@ -4,12 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Image Galery</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+    <main>
+        <header class="header">
+            <section class="container">
+                <div class="header_wrapper">
+                    <div class="title_inner">
+                        <img class="logo" src="./src/img/photo-camera-svgrepo-com.svg" alt="logo">
+                        <h1 class="title">Unsplash API</h1>
+                    </div>
+                    <div class="search_box">
+                        <input class="search_input" type="text" placeholder="search">
+                        <img class="search_icon" src="./src/img/search-svgrepo-com.svg" alt="search">
+                    </div>
+                </div>
+            </section>
+        </header>
+        <section class="container">
+            <div class="galery_inner">
+                <img src="https://placehold.jp/300x300.png" alt="">
+                <img src="https://placehold.jp/300x300.png" alt="">
+                <img src="https://placehold.jp/300x300.png" alt="">
+                <img src="https://placehold.jp/300x300.png" alt="">
+                <img src="https://placehold.jp/300x300.png" alt="">
+                <img src="https://placehold.jp/300x300.png" alt="">
+                <img src="https://placehold.jp/300x300.png" alt="">
+                <img src="https://placehold.jp/300x300.png" alt="">
+            </div>
+        </section>
 
+    </main>
+    <script src="app.js"></script>
 </body>
 
 </html>
