--- a/js30imageGalery/imdex.html
+++ b/js30imageGalery/imdex.html
@@ -21,20 +21,15 @@
                     <div class="search_box">
                         <input class="search_input" type="text" placeholder="search">
                         <img class="search_icon" src="./src/img/search-svgrepo-com.svg" alt="search">
+                        <img class="close_icon" src="./src/img/cancel2-svgrepo-com.svg" alt="search">
                     </div>
                 </div>
             </section>
         </header>
         <section class="container">
             <div class="galery_inner">
-                <img src="https://placehold.jp/300x300.png" alt="">
-                <img src="https://placehold.jp/300x300.png" alt="">
-                <img src="https://placehold.jp/300x300.png" alt="">
-                <img src="https://placehold.jp/300x300.png" alt="">
-                <img src="https://placehold.jp/300x300.png" alt="">
-                <img src="https://placehold.jp/300x300.png" alt="">
-                <img src="https://placehold.jp/300x300.png" alt="">
-                <img src="https://placehold.jp/300x300.png" alt="">
+                <img class="img" src="#" alt="">
+                <img class="img" src="#" alt="">
             </div>
         </section>
 
