feat: get api reqest

--- a/js30imageGalery/imdex.html
+++ b/js30imageGalery/imdex.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body class="body">
     <main>
         <header class="header">
             <section class="container">
@@ -28,8 +28,8 @@
         </header>
         <section class="container">
             <div class="galery_inner">
-                <img class="img" src="#" alt="">
-                <img class="img" src="#" alt="">
+                <div class="img" src="#" alt=""></div>
+                <!-- <div class="img" src="#" alt=""></div> -->
             </div>
         </section>
 
