feat: add events search on enter and search icon, add random images, random pictures are added when the page loads

--- a/js30imageGalery/imdex.html
+++ b/js30imageGalery/imdex.html
@@ -18,21 +18,24 @@
                         <img class="logo" src="./src/img/photo-camera-svgrepo-com.svg" alt="logo">
                         <h1 class="title">Unsplash API</h1>
                     </div>
-                    <div class="search_box">
-                        <input class="search_input" type="text" placeholder="search">
+                    <form class="search_box">
+                        <input class="search_input" type="text" placeholder="search" autocomplete="off">
                         <img class="search_icon" src="./src/img/search-svgrepo-com.svg" alt="search">
                         <img class="close_icon" src="./src/img/cancel2-svgrepo-com.svg" alt="search">
-                    </div>
+                    </form>
                 </div>
             </section>
         </header>
         <section class="container">
             <div class="galery_inner">
-                <div class="img" src="#" alt=""></div>
-                <!-- <div class="img" src="#" alt=""></div> -->
             </div>
         </section>
-
+        <footer class="footer">
+            <span>2023</span>
+            <a href="https://rs.school/js-stage0/" target="_blank">The Rolling
+                Scopes School</a>
+            <a href="https://github.com/misterT1A" target="_blank">misterT1A</a>
+        </footer>
     </main>
     <script src="app.js"></script>
 </body>
