feat: js logic winner

--- a/js30TicTacToe/index.html
+++ b/js30TicTacToe/index.html
@@ -9,7 +9,28 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="wrapper">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
 
+        <div class="popup_bg">
+            <div class="popup_wrapper">
+                <div class="popup_content">
+                    <span class="popup_title"></span>
+                    <button type="button" class="popup_btn">New game</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
