fix: footer rs logo

--- a/js30imageGalery/index.html
+++ b/js30imageGalery/index.html
@@ -32,8 +32,9 @@
         </section>
         <footer class="footer">
             <span>2023</span>
-            <a href="https://rs.school/js-stage0/" target="_blank">The Rolling
-                Scopes School</a>
+            <a href="https://rs.school/js-stage0/" target="_blank">
+                <img class="logo_rs" src="./src/img/rs_school_js.svg" alt="rs_school">
+            </a>
             <a href="https://github.com/misterT1A" target="_blank">misterT1A</a>
         </footer>
     </main>
