feat: design and btns

--- a/js30snakeGame/index.html
+++ b/js30snakeGame/index.html
@@ -10,7 +10,23 @@
 </head>
 
 <body>
-    <div class="game">
+    <img class="bgImg" src="./img/1.jpg" alt="">
+    <div class="container">
+        <div class="game">
+        </div>
+        <div class="controls">
+            <div class="info">
+                <div class="score">Score: 1500</div>
+                <div class="speed">Speed: 1</div>
+                <div class="time">Time: 00:00</div>
+                <div class="table">record table</div>
+            </div>
+            <div class="newGame">New Game</div>
+            <div class="leave">Leave the country</div>
+            <div class="footer">
+
+            </div>
+        </div>
     </div>
 </body>
 
