feat: speed panel

--- a/js30randomGame/index.html
+++ b/js30randomGame/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-    <canvas id="game" width="800" height="900"></canvas>
+    <div class="game_wrapper">
+        <canvas id="game" width="800" height="900"></canvas>
+        <div class="stats_wrapper">
+            <!-- <img id="arrowSpeed" src="./img/arrowSpeed.png" alt="arrow"> -->
+            <!-- <img id="speedPanel" src="./img/speedPanel.png" alt="speedpanel"> -->
+            <!-- <div class="btn_menu">MENU</div> -->
+        </div>
+    </div>
     <script src="./index.js" type="module"></script>
 </body>
 
