--- a/js30randomGame/index.html
+++ b/js30randomGame/index.html
@@ -13,14 +13,14 @@
         <canvas id="game" width="800" height="900"></canvas>
         <div class="game_main_menu">
             <div class="btn_wrapper">
-                <div class="btn_main name_btn">Enter your Name</div>
-                <div class="btn_main game_btn">Start Game</div>
-                <div class="btn_main records_btn">Records</div>
+                <div class="btn_main name_btn btn">Enter your Name</div>
+                <div class="btn_main game_btn btn">Start Game</div>
+                <div class="btn_main records_btn btn">Records</div>
             </div>
         </div>
         <form class="input_name hidden">
             <input id="inputName" type="text" placeholder="Enter your Name">
-            <button id="btnInputName" type="submit">Submit</button>
+            <button class="btn" id="btnInputName" type="submit">Submit</button>
         </form>
         <div class="records_wrapper hidden">
             <span class="record_name">Name</span>
@@ -39,8 +39,8 @@
         </div>
         <div class="stats_wrapper">
             <!-- <div class="btn_menu">MENU</div> -->
-            <div id="pauseGAme" class="btn_menu hidden">PAUSE</div>
-            <div id="newGame" class="btn_menu hidden">NEW GAME</div>
+            <div id="pauseGAme" class="btn_menu hidden btn">PAUSE</div>
+            <div id="newGame" class="btn_menu hidden btn">NEW GAME</div>
         </div>
         <div class="countdown_timer">
             <div class="first countdown hidden">3</div>
@@ -48,8 +48,8 @@
             <div class="third countdown hidden">1</div>
         </div>
         <div class="end_game hidden">
-            <div class="btn_main end backMenu">Menu</div>
-            <div class="btn_main end tryAgain">Try again</div>
+            <div class="btn_main end backMenu btn">Menu</div>
+            <div class="btn_main end tryAgain btn">Try again</div>
         </div>
     </div>
     <script src="./index.js" type="module"></script>
