feat: set data in local storage

--- a/js30randomGame/index.html
+++ b/js30randomGame/index.html
@@ -13,14 +13,14 @@
         <canvas id="game" width="800" height="900"></canvas>
         <div class="game_main_menu">
             <div class="btn_wrapper">
-                <div class="btn_main name_btn btn">Enter your Name</div>
                 <div class="btn_main game_btn btn">Start Game</div>
+                <div class="name_text">Name</div>
                 <div class="btn_main records_btn btn">Records</div>
             </div>
         </div>
-        <form class="input_name hidden">
+        <form class="input_name ">
             <input id="inputName" type="text" placeholder="Enter your Name">
-            <button class="btn" id="btnInputName" type="submit">Submit</button>
+            <button id="btnInputName" type="submit">Submit</button>
         </form>
         <div class="records_wrapper hidden">
             <span class="record_name">Name</span>
