fix: delete wrong functions

--- a/js30randomGame/index.html
+++ b/js30randomGame/index.html
@@ -17,6 +17,10 @@
                 <div class="name_text">Name</div>
                 <div class="btn_main records_btn btn">Records</div>
             </div>
+            <!-- <div class="game_footer">
+                <span>2023</span>
+                <a href="logo"></a>
+            </div> -->
         </div>
         <form class="input_name ">
             <input id="inputName" type="text" placeholder="Enter your Name">
