--- a/js30randomGame/index.html
+++ b/js30randomGame/index.html
@@ -17,10 +17,15 @@
                 <div class="name_text">Name</div>
                 <div class="btn_main records_btn btn">Records</div>
             </div>
-            <!-- <div class="game_footer">
-                <span>2023</span>
-                <a href="logo"></a>
-            </div> -->
+            <div class="footer">
+                <div class="year">2023</div>
+                <a class="logo" href="https://rs.school/js-stage0/" target="_blank">
+                    <img src="./img/rs_school_js.svg" alt="logo">
+                </a>
+                <a class="git" href="https://github.com/misterT1A" target="_blank">
+                    <img src="./img/github-142-svgrepo-com (1).svg" alt="git">
+                </a>
+            </div>
         </div>
         <form class="input_name ">
             <input id="inputName" type="text" placeholder="Enter your Name">
@@ -52,8 +57,11 @@
             <div class="third countdown hidden">1</div>
         </div>
         <div class="end_game hidden">
-            <div class="btn_main end backMenu btn">Menu</div>
-            <div class="btn_main end tryAgain btn">Try again</div>
+            <div class="end_wrapper">
+                <div class="btn_main end backMenu btn">Menu</div>
+                <div class="btn_main end tryAgain btn">Try again</div>
+            </div>
+            <div class="score_text">score: 0</div>
         </div>
     </div>
     <script src="./index.js" type="module"></script>
