--- a/cvSPA/prod/index.html
+++ b/cvSPA/prod/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cv</title>
+    <link rel="icon" href="assets/img/favicon-16x16.png">
 <script defer src="main.js"></script><link href="style.css" rel="stylesheet"></head>
 
 <body>
